--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
     </script>
 
 
-    <script src="./js/tabs.js"></script>
+   /* <script src="./js/tabs.js"></script>
     <script src="./js/slider.js"></script>
     <script src="./js/vertical-menu.js"></script>
     <script src="./js/accord-vert.js"></script>
@@ -815,7 +815,7 @@
     <script src="./js/ops.js"></script>
     <script src="./js/video.js"></script>
     <script src="./js/map.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js"></script> */
 </body>
 
 </html>
