--- a/index.html
+++ b/index.html
@@ -799,14 +799,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="./slick-slider/slick/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
-    
+    <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.5/mobile-detect.min.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=047b94ab-b856-4325-ab7a-87be2e4d4096
     &lang=ru_RU" type="text/javascript">
     </script>
 
 
-    <!-- <script src="./js/tabs.js"></script>
+    <script src="./js/tabs.js"></script>
     <script src="./js/slider.js"></script>
     <script src="./js/vertical-menu.js"></script>
     <script src="./js/accord-vert.js"></script>
@@ -814,7 +814,7 @@
     <script src="./js/main-menu.js"></script>
     <script src="./js/ops.js"></script>
     <script src="./js/video.js"></script>
-    <script src="./js/map.js"></script> -->
+    <script src="./js/map.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
