--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
     <script src="./js/ops.js"></script>
     <script src="./js/video.js"></script>
     <script src="./js/map.js"></script>
-    <script src="./js/main.js"></script>
+    <!-- <script src="./js/main.js"></script> -->
 </body>
 
 </html>
