--- a/index.html
+++ b/index.html
@@ -773,13 +773,13 @@
         </a>
         <div class="menu menu--vertical">
             <ul class="menu__list">
-                <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Серфборды</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Команда</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Меню</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Отзывы</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Как мы работаем</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+                <li class="menu__item"><a href="#" data-scroll-to="benefits" class="menu__link">О нас</a></li>
+                <li class="menu__item"><a href="#" data-scroll-to="boards" class="menu__link">Серфборды</a></li>
+                <li class="menu__item"><a href="#" data-scroll-to="team" class="menu__link">Команда</a></li>
+                <li class="menu__item"><a href="#" data-scroll-to="main-menu" class="menu__link">Меню</a></li>
+                <li class="menu__item"><a href="#" data-scroll-to="reviews" class="menu__link">Отзывы</a></li>
+                <li class="menu__item"><a href="#" data-scroll-to="video" class="menu__link">Как мы работаем</a></li>
+                <li class="menu__item"><a href="#" data-scroll-to="map" class="menu__link">Контакты</a></li>
             </ul>
         </div>
     </div>
