--- a/index.html
+++ b/index.html
@@ -803,19 +803,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.5/mobile-detect.min.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=047b94ab-b856-4325-ab7a-87be2e4d4096
     &lang=ru_RU" type="text/javascript">
-    </script>
-
-
-    <!-- <script src="./js/tabs.js"></script>
-    <script src="./js/slider.js"></script>
-    <script src="./js/vertical-menu.js"></script>
-    <script src="./js/accord-vert.js"></script>
-    <script src="./js/modals.js"></script>
-    <script src="./js/main-menu.js"></script>
-    <script src="./js/ops.js"></script>
-    <script src="./js/video.js"></script>
-    <script src="./js/map.js"></script> -->
-    <script src="./js/main.js"></script>
+    </script><script src="./js/main.js"></script>
 </body>
 
 </html>
